eks/service-envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
dynamic_resources:
  ads_config:
    api_type: GRPC
    grpc_services:
      envoy_grpc:
        cluster_name: ads_cluster
  cds_config: { ads: {} }
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                rds:
                  route_config_name: local_route
                  config_source:
                    ads: {}
                http_filters:
                  - name: envoy.router
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 90
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: egress_http
                codec_type: AUTO
                route_config:
                  name: external_route
                  virtual_hosts:
                  - name: external_service
                    domains: ["*"]
                    routes:
                    - match: { prefix: "/product" }
                      route: { cluster: product_cluster }
                    - match: { prefix: "/payment" }
                      route: { cluster: payment_cluster }
                    - match: { prefix: "/data" }
                      route: { cluster: data_cluster }
                http_filters:
                - name: envoy.router
  clusters:
    - name: ads_cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      upstream_connection_options:
        # configure a TCP keep-alive to detect and reconnect to the admin
        # server in the event of a TCP socket half open connection
        tcp_keepalive: {}
      load_assignment:
        cluster_name: ads_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: management-server
                      port_value: 5678
                      resolver_name: STRICT_DNS
    - name: product_cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      upstream_connection_options:
        # configure a TCP keep-alive to detect and reconnect to the admin
        # server in the event of a TCP socket half open connection
        tcp_keepalive: {}
      load_assignment:
        cluster_name: product_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 80
                  address:
                    socket_address:
                      address: envoy-product-side-car0
                      port_value: 80
                      resolver_name: STRICT_DNS
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 80
                  address:
                    socket_address:
                      address: envoy-product-side-car1
                      port_value: 80
                      resolver_name: STRICT_DNS
    - name: data_cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      upstream_connection_options:
        # configure a TCP keep-alive to detect and reconnect to the admin
        # server in the event of a TCP socket half open connection
        tcp_keepalive: {}
      load_assignment:
        cluster_name: data_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 80
                  address:
                    socket_address:
                      address: envoy-data-side-car
                      port_value: 80
                      resolver_name: STRICT_DNS
    - name: payment_cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      upstream_connection_options:
        # configure a TCP keep-alive to detect and reconnect to the admin
        # server in the event of a TCP socket half open connection
        tcp_keepalive: {}
      load_assignment:
        cluster_name: payment_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 80
                  address:
                    socket_address:
                      address: envoy-payment-side-car0
                      port_value: 80
                      resolver_name: STRICT_DNS
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 81
                  address:
                    socket_address:
                      address: envoy-payment-side-car1
                      port_value: 80
                      resolver_name: STRICT_DNS
